fix: change backspace and shift animations

--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,10 @@
     text-align: center;
     margin-bottom: 20px;
 }
+.caps {
+    background:red;
+    border-radius: 20px;
+}
 .key {
     width:40px;
     height:40px;
